--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/assets/images/GetTamLogoSmall.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Get Tam Game"
-    />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>GetTam</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<link
+			rel="icon"
+			href="%PUBLIC_URL%/assets/images/GetTamLogoSmall.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="Get Tam Game" />
+		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<title>GetTam</title>
+		<script
+			async
+			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2775045064169395"
+			crossorigin="anonymous"></script>
+	</head>
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
