--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,28 @@
 
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content="GetTam! The best 2048 inspired game." />
+		<meta
+			name="keywords"
+			content="get tam, gettam, gettamgame, get tam game, tam high, 2048" />
+		<meta name="author" content="Caden Marinozzi" />
+		<meta content="GetTam" property="og:title" />
+		<meta
+			content="The #1 unblocked games site at Tam."
+			property="og:description" />
+		<meta content="assets/images/GetTamLogoSmall.ico" property="og:image" />
+		<meta content="website" property="og:type" />
+		<meta content="https://gettamgame.com" property="og:url" />
+		<meta content="GetTam" property="og:site_name" />
+		<meta content="en_US" property="og:locale" />
+		<meta name="theme-color" content="#000000" />
 		<link
 			rel="icon"
 			href="%PUBLIC_URL%/assets/images/GetTamLogoSmall.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="Get Tam Game" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>GetTam</title>
 		<script
